--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ td {
 .tabla-dos {
   background-color: gray;
   border-radius: 10px;
-  width: 500px;
-  height: 500px;
+ width: 700px;
+  height: 700px;
 
 }
 
@@ -89,6 +89,7 @@ td {
 .center {
   display: flex;
   justify-content: center;
+  margin-top: 100px;
 }
 
 .lado {
@@ -136,25 +137,15 @@ td {
 }
 
 
-a{
-  color: transparent;
-  width: 100px;
-margin-left: 200px;
-padding: 0px 50px;
-border-radius: 10px;
-height: 20px;
-}
-
-a:hover{
-  display: block;
-  background-color: rgb(165, 10, 10);
-  color: white;
-}
 .mostrador{
   background-color: blue;
   position: absolute;
   color: white;
   margin-top: 50px;
  height: 25px;
- margin-right: 180px;
+ margin-right: 40px;
+ margin-top: 75px;
+ align-items: center;
+ padding: 10px 50px;
+ border-radius: 10px;
 }
